--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-keyring (46.2-1deepin1) unstable; urgency=medium
+
+  * fix: dbus object of login collection is not exported at first login
+
+ -- zsien <quezhiyong@deepin.org>  Fri, 13 Dec 2024 10:24:03 +0800
+
 gnome-keyring (46.2-1) unstable; urgency=medium
 
   * New upstream release
