--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gnome-keyring (46.2-1deepin2) unstable; urgency=medium
+
+  * disable gnome-keyring-daemon.server. 
+
+ -- liujianqiang <liujianqiang@uniontech.com>  Wed, 18 Dec 2024 14:44:11 +0800
+
 gnome-keyring (46.2-1deepin1) unstable; urgency=medium
 
   * fix: dbus object of login collection is not exported at first login
